--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -8,5 +8,5 @@ metadata:
   description: An example of a Backstage application.
 spec:
   type: website
-  owner: john@example.com
+  owner: user:guest
   lifecycle: experimental
